# compy-bridge-lib-glfw

./: .gitignore  pyproject.toml  readme.md
compy_bridge_lib_glfw/: d_types.py  hello_world.py
compy_bridge_lib_glfw/compy_data/bridge_jsons/: always_pass_by_value.json  import_map.json  name_map.json
compy_bridge_lib_glfw/data/bridge_jsons/: attr_map.json  call_map.json  pip_install.json
pypp_bridge_lib_glfw/: __init__.py
pypp_bridge_lib_glfw/pypp_data/bridge_jsons/: always_pass_by_value.json  attr_map.json  call_map.json  cmake_lists.json  name_map.json
pypp_bridge_lib_glfw/pypp_data/transpiler_config/: always_pass_by_value.json  attr_map.json  call_map.json
pypp_bridge_lib_glfw/pypp_data/transpiler_config/mapping_functions/: glfw_attr.py  glfw_call.py
pypp_bridge_lib_glfw/pypp_data/transpiler_config/mapping_functions.py/: glfw_attr.py
pypp_glfw/: __init__.py
pypp_glfw/pypp_data/transpiler_config/: always_pass_by_value.json  attr_map.json  call_map.json  name_map.json
