[project]
name = "compy-bridge-lib-glfw"
version = "0.0.0"
description = "a Compy bridge-library for glfw"
authors = [{ name = "Curtis Puetz", email = "todo@example.com" }]
readme = "readme.md"
license = {text = "MIT"}
dependencies = [
    "glfw==2.9.0"
]

[tool.hatch.build]
include = [
    "compy_bridge_lib_glfw/**/*"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"